--- a/ba thesis/stylesvs.tex
+++ b/ba thesis/stylesvs.tex
@@ -64,6 +64,9 @@
 % }}}
 
 % Weitere Pakete {{{
+\usepackage{tikz}			% Für die Baumstruktur
+\usetikzlibrary{positioning}
+\usepackage[edges]{forest}
 \usepackage{graphicx}       % Einfügen von Graphiken.
 \usepackage{tabu}           % Einfügen von Tabellen.
 \usepackage{multirow}       % Tabellenzeilen zusammenfassen.
